--- a/LoginPage.html
+++ b/LoginPage.html
@@ -28,19 +28,25 @@
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <table>
+            <tr>    
+              <td>
+		<span style="font-size: 12px;color: white;">Email veya Telefon Numarasi</span>
+		</td>
+              <td>
+<span style="font-size: 12px;color: white;">Sifre</span><br>
+		</td>            
+</tr>
             <tr>
-              <!-- <span style="margin-left:58px;font-size: 12px;color: white;">Sifre</span><br> -->
-              <span style="font-size: 12px;color: white;">Email veya Telefon Numarasi</span>
-              <span style="margin-right:55px;"></span>
-              <span style="font-size: 12px;color: white;">Sifre</span><br>
-            </tr>
-            <tr>
+<td>
               <input type="text" class="form-control" placeholder="Username">
-              <span style="margin-right:20px;"></span>
-              <input type="text" class="form-control" placeholder="Password">
-              <span style="margin-right:8px;"></span>
-              <button type="submit" class="btn btn-default"></button> <!-- Button'un boyutunu ayarla -->
-            </tr>
+</td>    
+<td>     
+     <input type="text" class="form-control" placeholder="Password">
+</td>    
+<td>     
+     <button type="submit" class="btn btn-light">Login</button> <!-- Button'un boyutunu ayarla -->
+</td>   
+         </tr>
           </table>
           <span style="color: white;font-size: 9px;">Forgot your password?</span>
         </div>
