Projedekilere kodu vermeden onceki son push

--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -69,22 +69,25 @@
               <a class="ProvileNav-stat" data-nav="tweets" href="/{Username}"></a>
               <span class="ProfileNav-label">Tweets</span><br>
               <span class="ProfileNav-value" data-count="26" data-is-compact="false">26</span>
-              <span style="margin-left:10px;display: inline-block">&nbsp;</span>
+              <span style="padding-left:70px">
             </li>
             <li class="ProfileNav-item">
               <a class="ProvileNav-stat" data-nav="following" href="/following"></a>
               <span class="ProfileNav-label">Following</span><br>
               <span class="ProfileNav-value" data-count="237" data-is-compact="false">237</span>
+              <span style="padding-left:80px"></span>
             </li>
             <li class="ProfileNav-item">
               <a class="ProvileNav-stat" data-nav="followers" href="/followers"></a>
               <span class="ProfileNav-label">Followers</span><br>
               <span class="ProfileNav-value" data-count="34" data-is-compact="false">34</span>
+              <span style="padding-left:90px"></span>
             </li>
             <li class="ProfileNav-item">
               <a class="ProvileNav-stat" data-nav="likes" href="/likes"></a>
               <span class="ProfileNav-label">Likes</span><br>
               <span class="ProfileNav-value" data-count="205" data-is-compact="false">205</span>
+              <span style="padding-left:70px"></span>
             </li>
           </ul>
         </div>
@@ -124,13 +127,16 @@
             <div class="ProfileMiddle-Header">
               <ul class="ProfileMiddle-HeaderList">
                 <li class="ProfileMiddle-HeaderItems">
-                  <a href="/KBuyukkorukcu">Tweets</a>
+                  <h2><a href="/KBuyukkorukcu">Tweets</a></h2>                  
+                  <span style="padding-left:50px"></span>
                 </li>
                 <li class="ProfileMiddle-HeaderItems">
-                  <a href="/Replies">Tweets&Replies</a>
+                  <h2><a href="/Replies">Tweets&Replies</a></h2>
+                  <span style="padding-left:50px"></span>
                 </li>
                 <li class="ProfileMiddle-HeaderItems">
-                  <a href="/KBuyukkorukcu/Media">Media</a>
+                  <h2><a href="/KBuyukkorukcu/Media">Media</a></h2>
+                  <span style="padding-left:50px"></span>
                 </li>
               </ul>
             </div>
