Starting Profile page

--- a/ProfilePage-FTry.html
+++ b/ProfilePage-FTry.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{ProfilePage}</title>
+  <title>Twitter'a Hosgeldiniz!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="profile-style-FTry.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-
 <body>
   <header>
     <nav class="navbar navbar-inverse" role="navigation">
-
       <div class="container-fluid">
         <!-- add header -->
         <div class="navbar-header">
@@ -62,7 +59,6 @@
             src="https://pbs.twimg.com/profile_images/1091656361610489856/bm3VWMEJ_200x200.jpg" alt="Profile-Photo">
         </a>
       </div>
-      <hr style="height:1px;border:0 none;color:#333;background-color:#333;" />
       <!-- Nav silinip, nav yerine border ile bir dikdortgen yapilacak-->
       <nav class="navbar navbar-light" style="background-color: #2d45ce;">
         <div class="navbar-content">
