Created MVP - i have to change the color of login page and then there's some side notes i have to check later on

--- a/-ProfilePage-FTry.html
+++ b/-ProfilePage-FTry.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Twitter'a Hosgeldiniz!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="profile-style-FTry.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="-profile-style-FTry.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
