--- a/MainPage.html
+++ b/MainPage.html
@@ -80,19 +80,19 @@
         <div class="panel-heading">
           <h3 class="panel-title">
             Trends
-            <small><a href="#">ciao</a></small>
+            <small><a href="#">Change</a></small>
           </h3>
         </div>
 
         <div class="panel-body">
           <ul class="list-unstyled">
-            <li><a href="#">#Cras justo odio</a></li>
-            <li><a href="#">#Dapibus ac facilisis in</a></li>
-            <li><a href="#">#Morbi leo risus</a></li>
-            <li><a href="#">#Porta ac consectetur ac</a></li>
-            <li><a href="#">#Vestibulum at eros</a></li>
-            <li><a href="#">#Vestibulum at eros</a></li>
-            <li><a href="#">#Vestibulum at eros</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
+            <li><a href="#">#Lorem ipsum dolor sit amet</a></li>
           </ul>
         </div>
       </div>
@@ -120,9 +120,10 @@
               <img alt="" class="media-object img-rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              <p>Dolorem aspernatur rerum, iure? Culpa iste aperiam sequi, fuga, quasi rerum, eum, quo natus tenetur
-                officia placeat.</p>
+              <h4 class="media-heading">Media header</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque non lacus a feugiat. Vivamus
+                metus purus, tristique vel commodo vel, varius pharetra mauris. Curabitur scelerisque vitae velit non
+                porta.</p>
               <ul class="nav nav-pills nav-pills-custom">
                 <li><a href="#"><span class="glyphicon glyphicon-share-alt"></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-retweet"></span></a></li>
@@ -137,9 +138,10 @@
               <img alt="" class="media-object img-rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              <p>Dolorem aspernatur rerum, iure? Culpa iste aperiam sequi, fuga, quasi rerum, eum, quo natus tenetur
-                officia placeat.</p>
+              <h4 class="media-heading">Media header</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque non lacus a feugiat. Vivamus
+                metus purus, tristique vel commodo vel, varius pharetra mauris. Curabitur scelerisque vitae velit non
+                porta.</p>
               <ul class="nav nav-pills nav-pills-custom">
                 <li><a href="#"><span class="glyphicon glyphicon-share-alt"></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-retweet"></span></a></li>
@@ -154,9 +156,10 @@
               <img alt="" class="media-object img-rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              <p>Dolorem aspernatur rerum, iure? Culpa iste aperiam sequi, fuga, quasi rerum, eum, quo natus tenetur
-                officia placeat.</p>
+              <h4 class="media-heading">Media header</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque non lacus a feugiat. Vivamus
+                metus purus, tristique vel commodo vel, varius pharetra mauris. Curabitur scelerisque vitae velit non
+                porta.</p>
               <ul class="nav nav-pills nav-pills-custom">
                 <li><a href="#"><span class="glyphicon glyphicon-share-alt"></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-retweet"></span></a></li>
@@ -171,9 +174,10 @@
               <img alt="" class="media-object img-rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              <p>Dolorem aspernatur rerum, iure? Culpa iste aperiam sequi, fuga, quasi rerum, eum, quo natus tenetur
-                officia placeat.</p>
+              <h4 class="media-heading">Media header</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque non lacus a feugiat. Vivamus
+                metus purus, tristique vel commodo vel, varius pharetra mauris. Curabitur scelerisque vitae velit non
+                porta.</p>
               <ul class="nav nav-pills nav-pills-custom">
                 <li><a href="#"><span class="glyphicon glyphicon-share-alt"></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-retweet"></span></a></li>
@@ -188,9 +192,10 @@
               <img alt="" class="media-object img-rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-              <p>Dolorem aspernatur rerum, iure? Culpa iste aperiam sequi, fuga, quasi rerum, eum, quo natus tenetur
-                officia placeat.</p>
+              <h4 class="media-heading">Media header</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pellentesque non lacus a feugiat. Vivamus
+                metus purus, tristique vel commodo vel, varius pharetra mauris. Curabitur scelerisque vitae velit non
+                porta.</p>
               <ul class="nav nav-pills nav-pills-custom">
                 <li><a href="#"><span class="glyphicon glyphicon-share-alt"></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-retweet"></span></a></li>
@@ -205,7 +210,9 @@
       <div class="panel panel-default">
         <div class="panel-heading" id="company-name">Vox</span></div>
         <div class="panel-body">
-          <a href="#" class="back-to-top"><p class="back-to-top-p">Back to top</p></a>
+          <a href="#" class="back-to-top">
+            <p class="back-to-top-p">Back to top</p>
+          </a>
         </div>
       </div>
     </div>
@@ -224,7 +231,7 @@
               <img src="http://placehold.it/32x32" alt="" class="media-object img-rounded">
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Nome e cognome</h4>
+              <h4 class="media-heading">Lorem ipsum</h4>
               <a href="#" class="btn btn-default btn-xs">
                 +
                 <span class="glyphicon glyphicon-user"></span>
@@ -237,7 +244,7 @@
               <img src="http://placehold.it/32x32" alt="" class="media-object img-rounded">
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Nome e cognome</h4>
+              <h4 class="media-heading">Lorem ipsum</h4>
               <a href="#" class="btn btn-default btn-xs">
                 +
                 <span class="glyphicon glyphicon-user"></span>
@@ -250,7 +257,7 @@
               <img src="http://placehold.it/32x32" alt="" class="media-object img-rounded">
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Nome e cognome</h4>
+              <h4 class="media-heading">Lorem ipsum</h4>
               <a href="#" class="btn btn-default btn-xs">
                 +
                 <span class="glyphicon glyphicon-user"></span>
@@ -266,15 +273,15 @@
           </a>
         </div>
       </div>
-        <ul class="list-inline">
-          <li>© 2019 Vox</li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Cookies</a></li>
-          <li><a href="#">Ads info</a></li>
-        </ul>
+      <ul class="list-inline">
+        <li>© 2019 Vox</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Cookies</a></li>
+        <li><a href="#">Ads info</a></li>
+      </ul>
     </div>
   </div>
 </div>
